# Vue3FastAPI-To-Do

./: .gitignore  Procfile  README.md  package-lock.json  pyproject.toml
backend/: .gitignore  .pre-commit-config.yaml  auth.py  config.py  crud.py  database.py  main.py  models.py  password_hashing.py  requirements.txt  schemas.py  sqlite_db.db  todo.db  utils.py
backend/repositories/: task_repo.py  user_repo.py
backend/routers/: authentication.py  authorization.py  task.py  user.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  sitemap.xml  vercel.json  vite.config.js  vue.config.js
frontend/public/: index.html
frontend/src/: axios.js  gaUtils.js  main.js  router.js
frontend/src/components/layout/: PostIt.vue  TheFooter.vue  TheHeader.vue  TheSpinner.vue
frontend/src/components/services/: auth-header.js
frontend/src/components/store/: TaskStore.js  userAuth.js
frontend/src/pages/: GoogleCallback.vue  NotFound.vue  TheDashboard.vue  TheDemo.vue  TheHome.vue  TheLogin.vue  TheRegistration.vue  TheTasks.vue
frontend/src/store/: authStore.js  taskStore.js
mobile/: pubspec.yaml
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart  models.dart  sticky_note.dart  sticky_note_container.dart  sticky_note_painter.dart  tasks_provider.dart  tasks_provider.g.dart
